fix: minor adjustment on mobile navbar

--- a/style/nav.scss
+++ b/style/nav.scss
@@ -60,7 +60,7 @@
         .links-container {
             transform: translateX(100%);
             position: absolute;
-            height: 90vh;
+            height: 100vh;
             top: 0;
             right: 0;
             width: 90%;
