--- a/style/style.css
+++ b/style/style.css
@@ -61,7 +61,7 @@
   .nav .links-container {
     transform: translateX(100%);
     position: absolute;
-    height: 90vh;
+    height: 100vh;
     top: 0;
     right: 0;
     width: 90%;
